# artemis

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md  azure-pipelines.yml  docker-compose.yml
.teamcity/: pom.xml  settings.kts
_pipeline/: cross-arch-build.yml  vars.yml
_pipeline/templates/: ci-tools.yml  cross-build.yml  lint.yml  meta.yml  publish-to-registry.yml  test.yml
docker/: Dockerfile  aarch64.Dockerfile  deb.Dockerfile  distroless.Dockerfile  docker-compose.test.yml  musl.Dockerfile  test.Dockerfile
docs/tools/: docker-rust.md
src/: app_config.yml  main.rs  tests.rs
src/configuration/: config.rs  secrets.rs
src/repositories/: mod.rs  mongo.rs  service_information.rs  ses.rs  sns.rs  sqs.rs
src/routes/: diagnostic.rs
src/services/: mod.rs  secret_manager.rs
src/telemetry/: elastic.rs  message.rs  mod.rs
src/tests/: mod.rs  routes.rs  routes_test.rs
src/tests/common/: mod.rs
src/utils/: autofac.rs  mod.rs  rocket_config.rs  rocket_launch.rs  service_information.rs
tools/: .markdownlint.json  CI.ps1  MarkdownLint.ps1  TestPipeline.ps1
