[package]
name = "ams_notifications"
version = "0.1.0"
authors = ["Alexander Hagerman <alexander.hagerman@samtec.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
shaku_rocket = "0.5.0"

[dependencies.shaku]
version = "0.5.0"
features = ["thread_safe"]
