[package]
name = "artemis"
version = "0.1.0"
authors = ["Alexander Hagerman <n0mn0m@burningdaylight.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
shaku_rocket = "0.5.0"
rusoto_core = "0.45.0"
rusoto_secretsmanager = "0.45.0"
futures = "0.3.8"
tokio = "0.2"

[dependencies.shaku]
version = "0.5.0"
features = ["thread_safe"]
