[package]
name = "artemis"
version = "0.1.0"
authors = ["Alexander Hagerman <n0mn0m@burningdaylight.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
elasticsearch = "7.10.0-alpha.1"
futures = "0.3.8"
mongodb = "1.1.1"
rand = "0.7.3"
rocket = "0.4.6"
rustc_version_runtime = "0.2.0"
rusoto_core = "0.45.0"
rusoto_ses = "0.45.0"
rusoto_secretsmanager = "0.45.0"
rusoto_sns = "0.45.0"
rusoto_sqs = "0.45.0"
serde = "1.0.118"
serde_json = "1.0.60"
serde_yaml = "0.8.14"
shaku_rocket = "0.5.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tokio = "0.2"
tokio-test = "0.4.0"


[dependencies.shaku]
version = "0.5.0"
features = ["thread_safe"]
